--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yummeez",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "per-env",
     "start:development": "concurrently \"npm:server\" \"npm:views\"",
