--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mahume/Yummeez#readme",
   "devDependencies": {
+    "babel-loader": "^8.0.6",
     "concurrently": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
